# DBwithAISAMPLE

./: README.md  deploy-databases.ps1
flask-multi-db-monorepo/: .gitignore  README.md  mcp_config.json  presentation.html  pyproject.toml  requirements.txt  run_all.ps1  run_all.py
flask-multi-db-monorepo/apps/azure-sql-app/: __init__.py  app.py  config.py  requirements.txt
flask-multi-db-monorepo/apps/cosmosdb-mongo-app/: __init__.py  app.py  config.py  requirements.txt
flask-multi-db-monorepo/apps/postgresql-app/: __init__.py  app.py  config.py  requirements.txt
flask-multi-db-monorepo/db/mongo/: init.js
flask-multi-db-monorepo/db/postgres/: init.sql
flask-multi-db-monorepo/db/sqlserver/: init.sql
flask-multi-db-monorepo/logistics_app/: app.py
flask-multi-db-monorepo/logistics_app/services/: delivery_service.py  login_audit_service.py  nl_query_service.py  partner_service.py  search_service.py
flask-multi-db-monorepo/mcp_cosmos_server/: README.md  __init__.py  mcp_config.json  server.py
flask-multi-db-monorepo/mcp_mongo_server/: README.md  __init__.py  mcp_config.json  server.py
flask-multi-db-monorepo/mcp_postgres_server/: README.md  __init__.py  mcp_config.json  server.py
flask-multi-db-monorepo/mcp_sql_server/: README.md  __init__.py  mcp_config.json  server.py
flask-multi-db-monorepo/order_app/: app.py
flask-multi-db-monorepo/product_app/: app.py
flask-multi-db-monorepo/shared/: config.py  embeddings.py  hybrid_rank.py
flask-multi-db-monorepo/unified_app/: README.md  __init__.py  app.py  requirements.txt  translations.py
(+92 files in other folders)
