[tool.poetry]
name = "flask-multi-db-monorepo"
version = "0.1.0"
description = "A mono-repo containing multiple Flask applications using different databases."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
flask = "^2.0"
flask_sqlalchemy = "^2.5"
flask_cors = "^3.0"
azure-cosmos = "^4.2"
psycopg2 = "^2.9"
pymssql = "^2.2"
dnspython = "^2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"